// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render children 1`] = `
<div>
  Children
</div>
`;

exports[`should render children when is function 1`] = `
<div
  fetching={true}
>
  Children Function
</div>
`;

exports[`should render component prop 1`] = `
<div
  fetching={true}
>
  Component
</div>
`;

exports[`should render prop 1`] = `
<div
  fetching={true}
>
  Render
</div>
`;
